--- a/src/app/home/restaurant-menu/add-restaurant-menu/add-restaurant-menu.component.html
+++ b/src/app/home/restaurant-menu/add-restaurant-menu/add-restaurant-menu.component.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="col-sm-4">
-                    <label for="">Course Type </label>
+                    <label for="">Category Type </label>
 
                     <select name="" id="" class="form-control" [(ngModel)]="ctype" [ngClass]="{ 'is-invalid': submitted && f.ctype.errors }" formControlName="ctype">
                         <option value="" disabled selected>Choose a option </option>
@@ -63,7 +63,7 @@
                        
                     </select>
                     <div *ngIf="submitted && f.ctype.errors" class="invalid-feedback">
-                        <div *ngIf="f.ctype.errors.required">Course type is required</div>
+                        <div *ngIf="f.ctype.errors.required">Category type is required</div>
 
                     </div>
                 </div>
@@ -82,7 +82,10 @@
 
 
                 <div class="col-sm-12">
-                    <button class="btn btn-warning" (click)="submit()">SUBMIT</button>
+                    <!-- <button class="btn btn-warning" (click)="submit()">SUBMIT</button> -->
+                    <button class="btn btn-warning" (click)="submit()" [disabled]="isLoading"><i class="fa"
+                        [ngClass]="{' fa-spinner fa-spin': isLoading, 'fa-check': !isLoading}"></i>
+                    {{button}}</button>
                 </div>
 
             </div>
