--- a/src/app/coursetype/coursetype.component.html
+++ b/src/app/coursetype/coursetype.component.html
@@ -39,11 +39,10 @@
                     <ng-container matColumnDef="action">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
                         <mat-cell *matCellDef="let row">
-                            <button class="btn btn-success">
-                            <i class="fa fa-edit" (click)="edit(row)"></i>
+                            <!-- <button class="btn btn-success"> -->
+                            <!-- <i class="fa fa-edit" (click)="edit(row)"></i> -->
+                            <button class="btn btn-success" (click)="edit(row)"><i class="fa fa-edit" style="color: white;"></i></button> &nbsp;
 
-
-                            </button>
                             <button class="btn btn-warning" (click)="active(row)" *ngIf="row.menu_state == 'Inactive'">Active </button>&nbsp;
                             <button class="btn btn-danger" (click)="inactive(row)" *ngIf="row.menu_state == 'Active'">In-Active  </button>
 
