--- a/src/app/coursetype/edit-coursetype/edit-coursetype.component.html
+++ b/src/app/coursetype/edit-coursetype/edit-coursetype.component.html
@@ -21,7 +21,7 @@
             <div class="row">
 
                 <div class="col-sm-6">
-                    <label for="">Course Type </label>
+                    <label for="">Category Type </label>
 
                     <!-- <select name="" id="" class="form-control" [(ngModel)]="ctype" [ngClass]="{ 'is-invalid': submitted && f.ctype.errors }" formControlName="ctype">
                         <option value="" disabled selected>Choose a option </option>
@@ -31,14 +31,17 @@
                         <option value="Dinner">DINNER</option>
                         <option value="Deserts">DESERTS</option>
                     </select> -->
-                    <input type="text" class="form-control" [(ngModel)]="ctype" [ngClass]="{ 'is-invalid': submitted && f.ctype.errors }" formControlName="ctype" placeholder="Enter course type">
+                    <input type="text" class="form-control" [(ngModel)]="ctype" [ngClass]="{ 'is-invalid': submitted && f.ctype.errors }" formControlName="ctype" placeholder="Enter category type">
                     <div *ngIf="submitted && f.ctype.errors" class="invalid-feedback">
-                        <div *ngIf="f.ctype.errors.required">Course type is required</div>
+                        <div *ngIf="f.ctype.errors.required">Category type is required</div>
 
                     </div>
                 </div>
                 <div class="col-sm-12">
-                    <button class="btn btn-warning" (click)="submit()">SUBMIT</button>
+                    <!-- <button class="btn btn-warning" (click)="submit()">SUBMIT</button> -->
+                    <button class="btn btn-warning" (click)="submit()" [disabled]="isLoading"><i class="fa"
+                        [ngClass]="{' fa-spinner fa-spin': isLoading, 'fa-check': !isLoading}"></i>
+                    {{button}}</button>
                 </div>
             </div>
 
