--- a/src/app/home/category/category.component.html
+++ b/src/app/home/category/category.component.html
@@ -26,7 +26,7 @@
             <div class="col-sm-12">
 
 
-                <mat-table [dataSource]="dataSource" matSortDirection="asc" matSort (matSortChange)="sortColumn($event)">
+                <mat-table [dataSource]="dataSource" matSort>
 
                     <!-- ID Column -->
                     <ng-container matColumnDef="id">
@@ -50,7 +50,9 @@
                     <ng-container matColumnDef="action">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
                         <mat-cell *matCellDef="let row">
-                            <button class="btn btn-success" (click)=edit(row)><i class="fa fa-edit" style="color: white;"></i></button> &nbsp;
+                            <button class="btn btn-success" (click)="edit(row)">
+                                <i class="fa fa-edit" style="color: white !important"></i>
+                            </button> &nbsp;
 
                             <button class="btn btn-warning" (click)="active(row)" *ngIf="row.category_state == 'Inactive'">Active </button>&nbsp;
                             <button class="btn btn-danger" (click)="inactive(row)" *ngIf="row.category_state == 'Active'">In-Active  </button>
