--- a/src/app/home/category/edit-category/edit-category.component.html
+++ b/src/app/home/category/edit-category/edit-category.component.html
@@ -69,7 +69,10 @@
                 </div>
 
                 <div class="col-sm-12">
-                    <button class="btn btn-warning" (click)="submit()">SUBMIT</button>
+                    <!-- <button class="btn btn-warning" (click)="submit()">SUBMIT</button> -->
+                    <button class="btn btn-warning" (click)="submit()" [disabled]="isLoading"><i class="fa"
+                        [ngClass]="{' fa-spinner fa-spin': isLoading, 'fa-check': !isLoading}"></i>
+                    {{button}}</button>
                 </div>
 
             </div>
