feild changes updated

--- a/src/app/home/shop-menu/add-shop-menu/add-shop-menu.component.html
+++ b/src/app/home/shop-menu/add-shop-menu/add-shop-menu.component.html
@@ -146,9 +146,8 @@
 
                 </div>
 
-                <div class="col-sm-4">
+                <!-- <div class="col-sm-4">
                     <label for="">Menu Image </label>
-                    <!-- <input type="file" class="form-control" placeholder="Enter the Product Closing time " [(ngModel)]="mimages" [ngClass]="{ 'is-invalid': submitted && f.mimages.errors }" formControlName="mimages"> -->
                     <input class="form-control" #file type="file" (change)="addshopimage($event)" [ngClass]="{ 'is-invalid': submitted && f.mimages.errors }" formControlName="mimages">
 
                     <div *ngIf="submitted && f.mimages.errors" class="invalid-feedback">
@@ -156,7 +155,7 @@
 
                     </div>
 
-                </div>
+                </div> -->
 
 
                 <div class="col-sm-4" style="margin-top: 20px;">
