--- a/src/app/home/category/category.component.html
+++ b/src/app/home/category/category.component.html
@@ -26,7 +26,7 @@
             <div class="col-sm-12">
 
 
-                <mat-table [dataSource]="dataSource" matSort>
+                <mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
 
                     <!-- ID Column -->
                     <ng-container matColumnDef="id">
@@ -36,7 +36,7 @@
 
                     <!-- Category Name Column -->
                     <ng-container matColumnDef="categoryname">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Category Name</mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef mat-sort-header="categoryname"> Category Name</mat-header-cell>
                         <mat-cell *matCellDef="let row"> {{row.category_name}} </mat-cell>
                     </ng-container>
 
@@ -48,7 +48,7 @@
 
                     <!-- Action Column -->
                     <ng-container matColumnDef="action">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef mat-sort-header="action"> Action </mat-header-cell>
                         <mat-cell *matCellDef="let row">
                             <button class="btn btn-success" (click)="edit(row)">
                                 <i class="fa fa-edit" style="color: white !important"></i>
