--- a/src/app/home/general-menu/add-general-menu/add-general-menu.component.html
+++ b/src/app/home/general-menu/add-general-menu/add-general-menu.component.html
@@ -17,7 +17,7 @@
         </div>
         <form [formGroup]="generalmenuFormRegistration">
             <div class="row">
-
+                <!-- 
                 <div class="col-sm-4">
                     <label for=""> Shop Name</label>
 
@@ -29,7 +29,7 @@
                         <div *ngIf="f.sname.errors.required">Shop name is required</div>
 
                     </div>
-                </div>
+                </div> -->
 
 
                 <div class="col-sm-4">
