--- a/src/app/home/general-menu/general-menu.component.html
+++ b/src/app/home/general-menu/general-menu.component.html
@@ -27,14 +27,14 @@
                     <!--ID Column -->
                     <ng-container matColumnDef="id">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> ID </mat-header-cell>
-                        <mat-cell *matCellDef="let row;let index;"> G{{i+1}} </mat-cell>
+                        <mat-cell *matCellDef="let row;let i= index;"> G{{i+1}} </mat-cell>
                     </ng-container>
 
                     <!--ID Column -->
-                    <ng-container matColumnDef="shopname">
+                    <!-- <ng-container matColumnDef="shopname">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Shop Name </mat-header-cell>
                         <mat-cell *matCellDef="let row"> {{row.shop_id.shop_name}} </mat-cell>
-                    </ng-container>
+                    </ng-container> -->
 
                     <!-- Item Name Column -->
                     <ng-container matColumnDef="itemname">
