--- a/src/app/offers/add-offers/add-offers.component.html
+++ b/src/app/offers/add-offers/add-offers.component.html
@@ -77,11 +77,11 @@
                 </div>
 
                 <div class="col-sm-4">
-                    <label for="">Total No of Users </label>
-                    <input type="number" class="form-control" placeholder="Enter the Total No of Users  " [(ngModel)]="tnusers" [ngClass]="{ 'is-invalid': submitted && f.tnusers.errors }" formControlName="tnusers">
+                    <label for="">No of Quantity Per User </label>
+                    <input type="number" class="form-control" placeholder="Enter the No of Quantity Per User   " [(ngModel)]="tnusers" [ngClass]="{ 'is-invalid': submitted && f.tnusers.errors }" formControlName="tnusers">
 
                     <div *ngIf="submitted && f.tnusers.errors" class="invalid-feedback">
-                        <div *ngIf="f.tnusers.errors.required">Total no of users is required</div>
+                        <div *ngIf="f.tnusers.errors.required">No of Quantity Per User </div>
 
                     </div>
                 </div>
