--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -14,9 +14,9 @@
                 <li routerLinkActive="active">
                     <a routerLink="/shop"><i class="fa fa-coffee"></i> <span> SHOP REGISTER</span></a>
                 </li>
-
+                <hr>
                 <li routerLinkActive="active">
-                    <a routerLink="/coursetype"><i class="fa fa-cutlery"></i> <span>RESTAURANT CATEGORY</span></a>
+                    <a routerLink="/coursetype"><i class="fa fa-cutlery"></i> <span>RESTAURANT ITEM CATEGORY</span></a>
                 </li>
 
 
@@ -28,9 +28,10 @@
                 <li routerLinkActive="active">
                     <a routerLink="/shopmenu"><i class="fa fa-shopping-cart"></i> <span>RESTAURANT MENU</span></a>
                 </li>
+                <hr>
 
                 <li routerLinkActive="active">
-                    <a routerLink="/generalcategory"><i class="fa fa-shopping-cart"></i> <span>GENERAL CATEGORY</span></a>
+                    <a routerLink="/generalcategory"><i class="fa fa-shopping-cart"></i> <span>GENERAL ITEM CATEGORY</span></a>
                 </li>
 
                 <li routerLinkActive="active">
@@ -41,6 +42,7 @@
                 <li routerLinkActive="active">
                     <a routerLink="/generalshopmenu"><i class="fa fa-apple"></i> <span>GENERAL SHOP MENU</span></a>
                 </li>
+                <hr>
 
                 <li routerLinkActive="active">
                     <a routerLink="/offers"><i class="fa fa-gift"></i> <span>OFFERS</span></a>
