--- a/src/app/home/restaurant-menu/restaurant-menu.component.html
+++ b/src/app/home/restaurant-menu/restaurant-menu.component.html
@@ -88,6 +88,28 @@
             </mat-table>
 
             <mat-paginator #paginator [length]="totalLength" [pageSize]="limit" (page)="changePage($event)"></mat-paginator>
+            <!-- <div class="paginationsection">
+
+                <div class="row">
+                    <div class="col-sm-6">
+
+                    </div>
+                    <div class="col-sm-4">
+                        <p style="text-align: end;"> of {{totalLength}}</p>
+                    </div>
+                    <div class="col-sm-2" style="text-align: end; cursor: pointer;">
+                        <span class="material-icons" matTooltip="Previous">
+                    keyboard_arrow_left
+                    </span>
+                        <span class="material-icons" matTooltip="Next">
+                    keyboard_arrow_right
+                    </span>
+                    </div>
+                </div>
+
+
+
+            </div> -->
         </div>
     </div>
 </div>
