--- a/src/app/home/general-menu/edit-general-menu/edit-general-menu.component.html
+++ b/src/app/home/general-menu/edit-general-menu/edit-general-menu.component.html
@@ -18,7 +18,7 @@
         <form [formGroup]="generalmenuFormRegistration">
             <div class="row">
 
-                <div class="col-sm-4">
+                <!-- <div class="col-sm-4">
                     <label for=""> Shop Name</label>
 
                     <select name="" id="" class="form-control" [(ngModel)]="sname" [ngClass]="{ 'is-invalid': submitted && f.sname.errors }" formControlName="sname">
@@ -29,7 +29,7 @@
                         <div *ngIf="f.sname.errors.required">Shop name is required</div>
 
                     </div>
-                </div>
+                </div> -->
 
 
                 <div class="col-sm-4">
