--- a/src/app/home/general-menu/general-menu.component.html
+++ b/src/app/home/general-menu/general-menu.component.html
@@ -65,7 +65,8 @@
                     </mat-row>
                 </mat-table>
 
-                <mat-paginator></mat-paginator>
+                <mat-paginator #paginator [length]="totalLength" [pageSize]="limit" (page)="changePage($event)"></mat-paginator>
+
             </div>
         </div>
     </div>
