--- a/src/app/home/orders/orders.component.html
+++ b/src/app/home/orders/orders.component.html
@@ -24,7 +24,7 @@
                     <!--Order ID Column -->
                     <ng-container matColumnDef="orderid">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Order ID </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.orderid}} </mat-cell>
+                        <mat-cell *matCellDef="let row"> {{row.order_id}} </mat-cell>
                     </ng-container>
 
                     <!-- Customer Address Column -->
@@ -38,14 +38,14 @@
                     <!--Time Column -->
                     <ng-container matColumnDef="time">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Time </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.time}} </mat-cell>
+                        <mat-cell *matCellDef="let row"> {{row.order_time | slice:11:19}} </mat-cell>
                     </ng-container>
 
 
                     <!--  Date Column -->
                     <ng-container matColumnDef="date">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Date </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.date}} </mat-cell>
+                        <mat-cell *matCellDef="let row"> {{row.order_time | slice:0:10}} </mat-cell>
                     </ng-container>
 
                     <!--     
@@ -59,24 +59,28 @@
                     <!--  Order Status  Column -->
                     <ng-container matColumnDef="ordertstatus">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Order Status </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.orderstatus}} </mat-cell>
+                        <mat-cell *matCellDef="let row"> {{row.order_status}} </mat-cell>
                     </ng-container>
 
 
                     <!--Assign  Column -->
                     <ng-container matColumnDef="assign">
                         <mat-header-cell *matHeaderCellDef mat-sort-header>Assign </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.assign}} </mat-cell>
+                        <mat-cell *matCellDef="let row"> <button style="background-color: #00bff1;" class="btn btn-dark"> Assign Delivery Boys</button> </mat-cell>
                     </ng-container>
 
 
 
 
 
-                    <!-- Action Column -->
                     <ng-container matColumnDef="action">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.action}} </mat-cell>
+                        <mat-cell *matCellDef="let row">
+                            <!-- <button class="btn btn-dark"><i class="fa fa-trash" style="color: white;"></i></button>&nbsp; -->
+                            <button class="btn btn-success" (click)="Approval(row)" *ngIf="row.orderpayment_sts == 'Pending'">Approval </button>&nbsp;
+                            <button class="btn btn-danger" (click)="Reject(row)" *ngIf="row.orderpayment_sts == 'Pending'">Reject </button>
+
+                        </mat-cell>
                     </ng-container>
 
 
