--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -38,7 +38,29 @@
 
                 </div>
             </div>
-        </div>
-    </div>
+            <div class="col-sm-4">
+                <div class="card" routerLink="/shopcredentials">
+                    <img src="./assets/img/forgot-password.png" alt="" style="    height: 150px;">
+                    <h5>Shop Credentials</h5>
 
-</div>
+                </div>
+            </div>
+
+            <div class="col-sm-4">
+                <div class="card" routerLink="/admincredentials">
+                    <img src="./assets/img/admin-credentials.png" alt="" style="    height: 150px;">
+                    <h5>Admin Credentials</h5>
+
+                </div>
+            </div>
+
+            <div class="col-sm-4">
+                <div class="card" routerLink="/chatbox">
+                    <img src="./assets/img/icons8-chat-bubble-100.png" alt="" style="    height: 150px;">
+                    <h5>Chat Box</h5>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
