--- a/src/app/home/restaurant-menu/restaurant-menu.component.html
+++ b/src/app/home/restaurant-menu/restaurant-menu.component.html
@@ -10,7 +10,7 @@
             <div class="col-sm-4">
                 <div class="row">
                     <h4 class="page-title">RESTAURANT MENU</h4>
-                    <button class="btn btn-primary" style="height: 33px;
+                    <button *ngIf="status =='masteradmin'" class="btn btn-primary" style="height: 33px;
                     margin-left: 23px;" routerLink="/addrestaurantmenu"> Add Restaurant Menu</button>
                 </div>
 
@@ -73,10 +73,12 @@
                 <ng-container matColumnDef="action">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
                     <mat-cell *matCellDef="let row">
-                        <button class="btn btn-success" (click)=edit(row)><i class="fa fa-edit" style="color: white;"></i></button> &nbsp;
+                        <button *ngIf="status =='masteradmin'" class="btn btn-success" (click)=edit(row)><i class="fa fa-edit" style="color: white;"></i></button> &nbsp;
+                        <div *ngIf="status =='masteradmin'">
 
-                        <button class="btn btn-warning" (click)="active(row)" *ngIf="row.menu_state == 'Inactive'">Active </button>&nbsp;
-                        <button class="btn btn-danger" (click)="inactive(row)" *ngIf="row.menu_state == 'Active'">In-Active  </button>
+                            <button class="btn btn-warning" (click)="active(row)" *ngIf="row.menu_state == 'Inactive'">Active </button>&nbsp;
+                            <button class="btn btn-danger" (click)="inactive(row)" *ngIf="row.menu_state == 'Active'">In-Active  </button>
+                        </div>
 
                     </mat-cell>
 
