--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,14 +24,14 @@
                     </div>
                     <div class="form-group">
                         <label>Username </label>
-                        <input type="text" autofocus="" class="form-control">
+                        <input type="text" [(ngModel)]="userName" autofocus="" class="form-control">
                         <!-- <div *ngIf="submitted && f.userName.errors" class="invalid-feedback">
                         <div *ngIf="f.userName.errors.required">Username is required</div>
                     </div> -->
                     </div>
                     <div class="form-group">
                         <label>Password</label>
-                        <input type="password" class="form-control">
+                        <input type="password" [(ngModel)]="password" class="form-control">
                         <!-- <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                         <div *ngIf="f.password.errors.required">Password is required</div>
                     </div> -->
@@ -40,8 +40,8 @@
 
 
                     <div class="form-group text-center">
-                        <button class="btn btn-danger" (click)="Masteradminlogin()">Master Admin LOGIN</button>
-                        <button class="btn btn-success" (click)="shopadmin()">Shop LOGIN</button>
+                        <button class="btn btn-danger" (click)="Masteradminlogin()">Login</button>
+                        <!-- <button class="btn btn-success" (click)="shopadmin()"></button> -->
                     </div>
 
 
