--- a/src/app/settings/admin-credentials/add-admin-credentials/add-admin-credentials.component.html
+++ b/src/app/settings/admin-credentials/add-admin-credentials/add-admin-credentials.component.html
@@ -38,7 +38,7 @@
 
                     <select name="" id="" class="form-control" [(ngModel)]="location" [ngClass]="{ 'is-invalid': submitted && f.location.errors }" formControlName="location">
                         <option value="" disabled selected>Choose a option </option>
-                        
+                        <option *ngFor="let result of result" value="{{result._id}}">{{result.location}}</option>
                     </select>
                     <div *ngIf="submitted && f.location.errors" class="invalid-feedback">
                         <div *ngIf="f.location.errors.required">Location is required</div>
