--- a/src/app/settings/admin-credentials/admin-credentials.component.html
+++ b/src/app/settings/admin-credentials/admin-credentials.component.html
@@ -27,21 +27,33 @@
                     <!-- SL NO Column -->
                     <ng-container matColumnDef="slno">
                         <mat-header-cell *matHeaderCellDef mat-sort-header>SL NO</mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.menuname}} </mat-cell>
+                        <mat-cell *matCellDef="let row;let i=index;"> {{i+1}} </mat-cell>
                     </ng-container>
 
 
                     <!--Email/usernameColumn -->
                     <ng-container matColumnDef="emailusername">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Email / Username </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.salesrate}} </mat-cell>
+                        <mat-cell *matCellDef="let row"> {{row.userName}} </mat-cell>
+                    </ng-container>
+                    <ng-container matColumnDef="role">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> Role </mat-header-cell>
+                        <mat-cell *matCellDef="let row">
+                            <p *ngIf="row.role == '1'"> Master Admin</p>
+                            <p *ngIf="row.role == '2'"> Location Admin</p>
+                            <p *ngIf="row.role == '3'"> Master Admin</p>
+
+                        </mat-cell>
                     </ng-container>
 
 
                     <!--Location Column -->
                     <ng-container matColumnDef="location">
                         <mat-header-cell *matHeaderCellDef mat-sort-header>Location </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.location}} </mat-cell>
+                        <mat-cell *matCellDef="let row">
+                            <p *ngIf="row.locationId !=null">{{row.locationId.location}} </p>
+                            <p *ngIf="row.locationId ==null">Master Admin Credentials </p>
+                        </mat-cell>
                     </ng-container>
 
 
