--- a/src/app/home/delivery-boys/delivery-boys.component.html
+++ b/src/app/home/delivery-boys/delivery-boys.component.html
@@ -13,58 +13,64 @@
 
             </div>
 
- <div class="col-sm-4">
-     <button class="btn btn-primary" style="float: right;"routerLink="/adddeliveryboys"> Add Delivery Boys</button>
- </div>
+            <div class="col-sm-4">
+                <button class="btn btn-primary" style="float: right;" routerLink="/adddeliveryboys"> Add Delivery Boys</button>
+            </div>
         </div>
         <div class="row">
             <div class="col-sm-12">
-               
-  <mat-table [dataSource]="dataSource" matSort>
 
-    <!-- ID Column -->
-    <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> ID </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.id}} </mat-cell>
-    </ng-container>
+                <mat-table [dataSource]="dataSource" matSort>
 
-    <!--  Name Column -->
-    <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>  Name</mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.Name}} </mat-cell>
-    </ng-container>
+                    <!-- ID Column -->
+                    <ng-container matColumnDef="id">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> ID </mat-header-cell>
+                        <mat-cell *matCellDef="let row;let i = index;"> {{i+1}} </mat-cell>
+                    </ng-container>
 
-    <!--  Address Column -->
-    <ng-container matColumnDef="address">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Address </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.address}} </mat-cell>
-    </ng-container>
+                    <!--  Name Column -->
+                    <ng-container matColumnDef="name">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> Name</mat-header-cell>
+                        <mat-cell *matCellDef="let row"> {{row.name}} </mat-cell>
+                    </ng-container>
 
-    <!--Mobile Number Column -->
-    <ng-container matColumnDef="mobilenumber">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Mobile Number </mat-header-cell>
-      <mat-cell *matCellDef="let row" >  {{row.mobilenumber}} </mat-cell>
-    </ng-container>
+                    <!--  Address Column -->
+                    <ng-container matColumnDef="address">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> Address </mat-header-cell>
+                        <mat-cell *matCellDef="let row"> {{row.address}} </mat-cell>
+                    </ng-container>
 
-    <!-- Status Column -->
-    <ng-container matColumnDef="status">
-        <mat-header-cell *matHeaderCellDef mat-sort-header> Status</mat-header-cell>
-        <mat-cell *matCellDef="let row" >  {{row.status}} </mat-cell>
-      </ng-container>
+                    <!--Mobile Number Column -->
+                    <ng-container matColumnDef="mobilenumber">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> Mobile Number </mat-header-cell>
+                        <mat-cell *matCellDef="let row"> {{row.mobileNo}} </mat-cell>
+                    </ng-container>
 
-      <!--Action Column -->
-    <ng-container matColumnDef="action">
-        <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
-        <mat-cell *matCellDef="let row" >  {{row.action}} </mat-cell>
-      </ng-container>
+                    <!-- Status Column -->
+                    <ng-container matColumnDef="status">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> Status</mat-header-cell>
+                        <mat-cell *matCellDef="let row"> {{row.state}} </mat-cell>
+                    </ng-container>
 
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;">
-    </mat-row>
-  </mat-table>
+                    <!--Action Column -->
+                    <ng-container matColumnDef="action">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
+                        <mat-cell *matCellDef="let row">
 
-  <mat-paginator ></mat-paginator>
+                            <!-- <button class="btn btn-success">Edit</button> &nbsp; -->
+                            <button class="btn btn-primary" *ngIf="row.state =='Inactive'">Active</button>&nbsp;
+                            <button class="btn btn-danger" *ngIf="row.state =='Active'">InActive</button>
+
+                        </mat-cell>
+                    </ng-container>
+
+                    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                    <mat-row *matRowDef="let row; columns: displayedColumns;">
+                    </mat-row>
+                </mat-table>
+
+                <mat-paginator></mat-paginator>
             </div>
         </div>
     </div>
-    </div>
+</div>
