--- a/src/app/home/shop/edit-shop/edit-shop.component.html
+++ b/src/app/home/shop/edit-shop/edit-shop.component.html
@@ -70,7 +70,7 @@
 
                     <div *ngIf="submitted && f.sphn.errors" class="invalid-feedback">
                         <div *ngIf="f.sphn.errors.required">Shop phone number is required</div>
-
+                        <div *ngIf="f.sphn.errors.pattern">Phone number must be valid number</div>
                     </div>
                 </div>
 
