--- a/src/app/home/orders/orders.component.html
+++ b/src/app/home/orders/orders.component.html
@@ -24,7 +24,9 @@
                     <!--Order ID Column -->
                     <ng-container matColumnDef="orderid">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Order ID </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.order_id}} </mat-cell>
+                        <mat-cell *matCellDef="let row;let i=index;">
+                            <!-- <img *ngIf="i == 0" src="./assets/img/new.gif" alt="">  -->
+                            {{row.order_id}} </mat-cell>
                     </ng-container>
 
                     <!-- Customer Address Column -->
