--- a/src/app/home/restaurant-menu/restaurant-menu.component.html
+++ b/src/app/home/restaurant-menu/restaurant-menu.component.html
@@ -59,7 +59,10 @@
                 <!--Image Column -->
                 <ng-container matColumnDef="menuimage">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Menu Image </mat-header-cell>
-                    <mat-cell *matCellDef="let row"> <img src="{{apiUrl}}menurest/get/image/{{row._id}}" alt="" style="width: 100px;"> </mat-cell>
+                    <mat-cell *matCellDef="let row">
+                        <!-- <img src="{{apiUrl}}menurest/get/image/{{row._id}}" alt="" style="width: 100px;">  -->
+                        <button matTooltip="View Image" (click)="view(row._id)"> <i class="fa fa-eye"></i> </button>
+                    </mat-cell>
                 </ng-container>
 
                 <!-- Location Column
