--- a/src/app/home/shop-menu/add-shop-menu/add-shop-menu.component.html
+++ b/src/app/home/shop-menu/add-shop-menu/add-shop-menu.component.html
@@ -58,7 +58,14 @@
                         <div *ngIf="f.mname.errors.required">Menu name is required</div>
 
                     </div>
+
+                    <!-- <input type="text" placeholder="Search for a street" [formControl]="control" [matAutocomplete]="auto"> -->
+
+
+
                 </div>
+
+
                 <!-- <div class="col-sm-12">
                     <label for=""> Choose Locations</label>
                     <div class="row" style="padding: 15px;">
