--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -61,6 +61,14 @@
 
                 </div>
             </div>
+
+            <div class="col-sm-4">
+                <div class="card" routerLink="/upi">
+                    <img src="./assets/img/upi.png" alt="" style="    height: 150px;">
+                    <h5>UPI Credentials</h5>
+
+                </div>
+            </div>
         </div>
 
     </div>
