lateset fixes easydeel

--- a/src/app/home/shop/add-shop/add-shop.component.html
+++ b/src/app/home/shop/add-shop/add-shop.component.html
@@ -74,7 +74,7 @@
 
                     </div>
                 </div>
-    
+
                 <div class="col-sm-4">
                     <label for="">Shop Opening Time </label>
                     <input type="time" class="form-control" placeholder="Enter Your Shop Opening Time" [(ngModel)]="sotime" [ngClass]="{ 'is-invalid': submitted && f.sotime.errors }" formControlName="sotime">
@@ -154,6 +154,17 @@
 
                     </div>
                 </div>
+
+                <div class="col-sm-4">
+                    <label for="">Delivery Time</label>
+                    <input type="text" class="form-control" placeholder="Enter Your Delivery Time" [(ngModel)]="dtime" [ngClass]="{ 'is-invalid': submitted && f.dtime.errors }" formControlName="dtime">
+
+                    <div *ngIf="submitted && f.dtime.errors" class="invalid-feedback">
+                        <div *ngIf="f.dtime.errors.required">Delivery time is required</div>
+
+                    </div>
+                </div>
+
 
                 <div class="col-sm-4">
                     <label for="">Shop Image</label>
