--- a/src/app/home/pincodes/add-pincodes/add-pincodes.component.html
+++ b/src/app/home/pincodes/add-pincodes/add-pincodes.component.html
@@ -29,8 +29,13 @@
                     </div>
                 </div>
 
+
                 <div class="col-sm-12">
-                    <button class="btn btn-warning" (click)="submit()">SUBMIT</button>
+                    <!-- <button class="btn btn-warning" (click)="submit()">SUBMIT</button> -->
+                    <button class="btn btn-warning" (click)="submit()" [disabled]="isLoading"><i class="fa"
+                        [ngClass]="{' fa-spinner fa-spin': isLoading, 'fa-check': !isLoading}"></i>
+                    {{button}}</button>
+
                 </div>
 
             </div>
