--- a/src/app/settings/masteradminphonenumber/masteradminphonenumber.component.html
+++ b/src/app/settings/masteradminphonenumber/masteradminphonenumber.component.html
@@ -42,9 +42,12 @@
                 </div>
 
                 <div class="col-sm-12">
-                    <button class="btn btn-warning" (click)="submit()">SUBMIT</button>
-                </div>
+                    <!-- <button class="btn btn-warning" (click)="submit()">SUBMIT</button> -->
+                    <button class="btn btn-warning" (click)="submit()" [disabled]="isLoading"><i class="fa"
+                        [ngClass]="{' fa-spinner fa-spin': isLoading, 'fa-check': !isLoading}"></i>
+                    {{button}}</button>
 
+                </div>
             </div>
         </form>
     </div>
