--- a/src/app/home/general-shop-menu/edit-general-shop-menu/edit-general-shop-menu.component.html
+++ b/src/app/home/general-shop-menu/edit-general-shop-menu/edit-general-shop-menu.component.html
@@ -11,7 +11,7 @@
 
         <div class="row">
             <div class="col-sm-8">
-                <h4 class="page-title"> Add General Shop Menu</h4>
+                <h4 class="page-title"> Edit General Shop Menu</h4>
 
             </div>
         </div>
