--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -24,10 +24,15 @@
     margin-bottom: 10px;
 }
 
-.main-wrapper {
-    /* height: 40em;
+
+/* .main-wrapper { */
+
+
+/* height: 40em;
     background-size: cover;
     width: auto;
     background-image: url('../assets/img/clock.png');
     background-position: 50% 50%; */
-}
+
+
+/* } */
