--- a/src/app/settings/price-updator/price-updator.component.html
+++ b/src/app/settings/price-updator/price-updator.component.html
@@ -27,7 +27,7 @@
                     <!-- Menu Name Column -->
                     <ng-container matColumnDef="menuname">
                         <mat-header-cell *matHeaderCellDef mat-sort-header>Menu Name</mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.menuname}}% </mat-cell>
+                        <mat-cell *matCellDef="let row"> {{row.menuname}} </mat-cell>
                     </ng-container>
 
 
