--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -69,6 +69,14 @@
 
                 </div>
             </div>
+
+            <div class="col-sm-4">
+                <div class="card" routerLink="/locationadminphonenumber">
+                    <img src="./assets/img/location admin phn.png" alt="" style="    height: 150px;">
+                    <h5>Location Admin Phone Number</h5>
+
+                </div>
+            </div>
         </div>
 
     </div>
