--- a/src/app/home/delivery-boys/delivery-boys.component.html
+++ b/src/app/home/delivery-boys/delivery-boys.component.html
@@ -14,7 +14,8 @@
             </div>
 
             <div class="col-sm-4">
-                <button class="btn btn-primary" style="float: right;" routerLink="/adddeliveryboys"> Add Delivery Boys</button>
+                <button class="btn btn-primary" style="float: right;" routerLink="/adddeliveryboys"> Add Delivery
+                    Boys</button>
             </div>
         </div>
         <div class="row">
@@ -52,14 +53,21 @@
                         <mat-cell *matCellDef="let row"> {{row.state}} </mat-cell>
                     </ng-container>
 
-                    <!--Action Column -->
+
+                    <!-- Action Column -->
                     <ng-container matColumnDef="action">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
                         <mat-cell *matCellDef="let row">
+                            <button class="btn btn-success" (click)="edit(row)"><i
+                                    class="fa fa-edit" style="color: white;"></i></button> &nbsp;
+                            <!-- <button class="btn btn-dark"><i class="fa fa-trash" style="color: white;"></i></button>&nbsp; -->
 
-                            <!-- <button class="btn btn-success">Edit</button> &nbsp; -->
-                            <button class="btn btn-primary" *ngIf="row.state =='Inactive'">Active</button>&nbsp;
-                            <button class="btn btn-danger" *ngIf="row.state =='Active'">InActive</button>
+                            <div>
+                                <button class="btn btn-warning" (click)="active(row)" *ngIf="row.state == 'Inactive'">Active </button>
+                                <button class="btn btn-danger" (click)="inactive(row)" *ngIf="row.state == 'Active'">In-Active </button>
+
+                            </div>
+
 
                         </mat-cell>
                     </ng-container>
