--- a/src/app/home/delivery-boys/edit-delivery-boys/edit-delivery-boys.component.html
+++ b/src/app/home/delivery-boys/edit-delivery-boys/edit-delivery-boys.component.html
@@ -11,7 +11,7 @@
 
         <div class="row">
             <div class="col-sm-8">
-                <h4 class="page-title"> Add Delivery Boys</h4>
+                <h4 class="page-title">Edit Delivery Boys</h4>
 
             </div>
         </div>
