--- a/src/app/settings/chat-box/add-chat-box/add-chat-box.component.html
+++ b/src/app/settings/chat-box/add-chat-box/add-chat-box.component.html
@@ -11,7 +11,7 @@
 
         <div class="row">
             <div class="col-sm-8">
-                <h4 class="page-title"> Chat Box</h4>
+                <h4 class="page-title">Add Chat Box</h4>
 
             </div>
         </div>
@@ -44,8 +44,12 @@
                 </div>
 
 
-                <div class="col-sm-12 ">
-                    <button class="btn btn-warning " (click)="submit() ">SUBMIT</button>
+                <div class="col-sm-12">
+                    <!-- <button class="btn btn-warning" (click)="submit()">SUBMIT</button> -->
+                    <button class="btn btn-warning" (click)="submit()" [disabled]="isLoading"><i class="fa"
+                        [ngClass]="{' fa-spinner fa-spin': isLoading, 'fa-check': !isLoading}"></i>
+                    {{button}}</button>
+
                 </div>
 
             </div>
