--- a/src/app/settings/location-admin-phonenumber/edit-location-admin-phonenumber/edit-location-admin-phonenumber.component.html
+++ b/src/app/settings/location-admin-phonenumber/edit-location-admin-phonenumber/edit-location-admin-phonenumber.component.html
@@ -11,33 +11,20 @@
 
         <div class="row">
             <div class="col-sm-8">
-                <h4 class="page-title">Edit Admin Credentials</h4>
+                <h4 class="page-title">Edit Location Admin Phone Number</h4>
 
             </div>
         </div>
-        <form [formGroup]="editadmincredentialsFormRegistration">
+        <form [formGroup]="editlocationadminphonenumberformregistration">
 
             <div class="row">
 
-
-
-                <div class="col-sm-4">
-                    <label>Email / Username</label>
-                    <input type="text" class="form-control" [disabled]="false" placeholder="Enter the Email / Username" [(ngModel)]="emailusername" (keyup)="onkeydown(emailusername)" formControlName="emailusername">
-
-                </div>
-
-                <div class="col-sm-4">
-                    <label>Password</label>
-                    <input type="password" class="form-control" [disabled]="false" placeholder=" Enter the Password " [(ngModel)]="password " (keyup)="onkeydown1(password) " formControlName="password">
-
-                </div>
-
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <label for="">Location </label>
 
                     <select name="" id="" class="form-control" [(ngModel)]="location" [ngClass]="{ 'is-invalid': submitted && f.location.errors }" formControlName="location">
                         <option value="" disabled selected>Choose a option </option>
+                        <option *ngFor="let l of locations" value="{{l._id}}">{{l.location}}</option>
                         
                     </select>
                     <div *ngIf="submitted && f.location.errors" class="invalid-feedback">
@@ -47,6 +34,17 @@
                 </div>
 
 
+                <div class="col-sm-6">
+                    <label for=""> Admin Phone Number</label>
+                    <input type="number" class="form-control" placeholder="Enter Your Admin Phone Number" [(ngModel)]="aphn" [ngClass]="{ 'is-invalid': submitted && f.aphn.errors }" formControlName="aphn">
+
+                    <div *ngIf="submitted && f.aphn.errors" class="invalid-feedback">
+                        <div *ngIf="f.aphn.errors.required">Admin phone number is required</div>
+
+                    </div>
+
+                </div>
+
 
 
                 <div class="col-sm-12">
@@ -54,6 +52,7 @@
                     <button class="btn btn-warning" (click)="submit()" [disabled]="isLoading"><i class="fa"
                         [ngClass]="{' fa-spinner fa-spin': isLoading, 'fa-check': !isLoading}"></i>
                     {{button}}</button>
+
                 </div>
 
             </div>
