--- a/src/app/settings/shopcredentials/edit-shop-credentials/edit-shop-credentials.component.html
+++ b/src/app/settings/shopcredentials/edit-shop-credentials/edit-shop-credentials.component.html
@@ -11,7 +11,7 @@
 
         <div class="row">
             <div class="col-sm-8">
-                <h4 class="page-title"> Shop Credentials</h4>
+                <h4 class="page-title">Edit Shop Credentials</h4>
 
             </div>
         </div>
