--- a/src/app/settings/upi/edit-upi/edit-upi.component.html
+++ b/src/app/settings/upi/edit-upi/edit-upi.component.html
@@ -11,7 +11,7 @@
 
         <div class="row">
             <div class="col-sm-8">
-                <h4 class="page-title"> UPI Credentials</h4>
+                <h4 class="page-title">Edit UPI Credentials</h4>
 
             </div>
         </div>
@@ -39,9 +39,12 @@
 
 
 
+                <div class="col-sm-12">
+                    <!-- <button class="btn btn-warning" (click)="submit()">SUBMIT</button> -->
+                    <button class="btn btn-warning" (click)="submit()" [disabled]="isLoading"><i class="fa"
+                        [ngClass]="{' fa-spinner fa-spin': isLoading, 'fa-check': !isLoading}"></i>
+                    {{button}}</button>
 
-                <div class="col-sm-12 ">
-                    <button class="btn btn-warning " (click)="submit()">SUBMIT</button>
                 </div>
 
             </div>
