--- a/src/app/settings/admin-credentials/admin-credentials.component.html
+++ b/src/app/settings/admin-credentials/admin-credentials.component.html
@@ -56,7 +56,12 @@
                         </mat-cell>
                     </ng-container>
 
-
+                    <ng-container matColumnDef="password">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>Password </mat-header-cell>
+                        <mat-cell *matCellDef="let row">
+                            <p>{{row.password}} </p>
+                        </mat-cell>
+                    </ng-container>
 
 
                     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
