--- a/src/app/home/orders/orders.component.html
+++ b/src/app/home/orders/orders.component.html
@@ -29,7 +29,7 @@
                     </ng-container>
                     <!-- Customer Address Column -->
                     <ng-container matColumnDef="customeraddress">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Customer Address</mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> Customer Name</mat-header-cell>
                         <mat-cell *matCellDef="let row"> {{row.customer_id.name}} </mat-cell>
                     </ng-container>
 
