--- a/src/app/home/orders/view-order-details/view-order-details.component.html
+++ b/src/app/home/orders/view-order-details/view-order-details.component.html
@@ -7,8 +7,8 @@
 <p>Booking ID : {{details.order_id}}</p>
 <p>Total Amount : {{details.total_price}}</p>
 <p>Payment Mode : {{details.order_pmode}}</p>
-<p>Shop Name : {{this.shopdetails[0].shop_id['shop_name']}}</p>
-<p>Shop Contact Number : {{this.shopdetails[0].shop_id['shop_phone']}}</p>
+<p>Shop Name : {{sname}}</p>
+<p>Shop Contact Number : {{sphone}}</p>
 <!-- <p>Shop Name : {{shopdetails.shop_id.shop_name}}</p> -->
 <p *ngIf="!isStatus">Order Assigned to : {{dboyName}}</p>
 
