--- a/src/app/home/users/users.component.html
+++ b/src/app/home/users/users.component.html
@@ -44,10 +44,10 @@
                     </ng-container>
 
                     <!--Email Column -->
-                    <ng-container matColumnDef="email">
+                    <!-- <ng-container matColumnDef="email">
                         <mat-header-cell *matHeaderCellDef mat-sort-header>Email</mat-header-cell>
                         <mat-cell *matCellDef="let row"> {{row.email}} </mat-cell>
-                    </ng-container>
+                    </ng-container> -->
 
                     <!--Redeem Point Column -->
                     <ng-container matColumnDef="redeempoint">
