--- a/src/app/offers/edit-offers/edit-offers.component.html
+++ b/src/app/offers/edit-offers/edit-offers.component.html
@@ -183,7 +183,12 @@
                     <input type="radio">
                 </div> -->
 
-
+                <div class="col-sm-4" style="margin-top: 20px;">
+                    <label for="">Show / Hide</label>
+                    <br> show
+                    <input type="radio" [(ngModel)]="showorhide" value="Show" formControlName="showorhide"> Hide
+                    <input type="radio" [(ngModel)]="showorhide" value="Hide" formControlName="showorhide">
+                </div>
                 <div class="col-sm-12">
                     <!-- <button class="btn btn-warning" (click)="submit()">SUBMIT</button> -->
                     <button class="btn btn-warning" (click)="submit()" [disabled]="isLoading"><i class="fa"
